--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gatsby-source-filesystem": "^2.6.1",
     "gatsby-transformer-json": "^2.6.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
