--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^0.2.32",
+    "aws-amplify": "^3.3.12",
     "gatsby": "^2.26.1",
     "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-source-filesystem": "^2.6.1",
